--- a/app/sass/global.scss
+++ b/app/sass/global.scss
@@ -52,8 +52,10 @@ $font-stack: 'omnes-pro', 'helvetica neue', helvetica, sans-serif;
 // Typography //
 ////////////////
 
-html { font-family: $font-stack; }
-h1, h2, h3, h4 { margin: 0; }
+body { font-family: $font-stack; }
+h1, h2, h3, h4 { margin: 0; font-weight: normal; line-height: 1; }
+
+.t-uppercase { text-transform: uppercase; }
 
 
 
@@ -92,10 +94,10 @@ figure { padding: 0; -webkit-margin-before: 0; -webkit-margin-after: 0; -webkit-
 .plant { width: 300px; display: block; float: left; margin: 10px; @extend .clearfix; }
 .plant--header { margin-bottom: 1em; @extend .clearfix; }
 .plant--name {}
-.plant--water-every {}
+.plant--water-every { @extend .t-uppercase; }
 .plant--sched { position: relative; height: 20px; margin-bottom: 2em; }
-.plant--sched--last { position: absolute; left: 0; }
-.plant--sched--next { position: absolute; right: 0; }
+.plant--sched--last { position: absolute; left: 0; @extend .t-uppercase; }
+.plant--sched--next { position: absolute; right: 0; @extend .t-uppercase; }
 .plant--sched--bar { position: absolute; left: 4em; right: 4em; height: 20px; }
 .plant--sched--bar > .fill { @extend .l-right; height: 100%; background: $one; }
 .plant--water {}
